--- a/scott-1980/Makefile
+++ b/scott-1980/Makefile
@@ -7,4 +7,8 @@ all: scott-main.tex
 	cp scott-1980-cmr.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ Lambda-Calculus\ \(1980\,cmr\).pdf
 	cp scott-1980-ch.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ Lambda-Calculus\ \(1980\,ch\).pdf
 	cp scott-1980-pal-eu.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ Lambda-Calculus\ \(1980\,eu\).pdf
-	
+
+clean:
+	rm -rf *.out *.log *.aux *sync*
+
+.PHONY: clean
