--- a/scott-1980/Makefile
+++ b/scott-1980/Makefile
@@ -1,4 +1,7 @@
 all: scott-main.tex
+	pdflatex scott-1980.tex
+	pdflatex scott-1980.tex
+	pdflatex scott-1980.tex
 	pdflatex scott-1980-cmr.tex
 	pdflatex scott-1980-pal.tex
 	pdflatex scott-1980-ch.tex
