--- a/yoneda-speedrun/Makefile
+++ b/yoneda-speedrun/Makefile
@@ -8,6 +8,10 @@ all:
 	pdflatex yoneda-speedrun-pal.tex
 
 
+	pdflatex yoneda-speedrun-pal-eu.tex
+	pdflatex yoneda-speedrun-pal-eu.tex
+	pdflatex yoneda-speedrun-pal-eu.tex
+
 	pdflatex yoneda-speedrun-lucida.tex
 	pdflatex yoneda-speedrun-lucida.tex
 	pdflatex yoneda-speedrun-lucida.tex
@@ -15,6 +19,8 @@ all:
 	cp yoneda-speedrun.pdf "/Users/psu/Dropbox/GoodReader/Math and Physics/More Math/Cats/yoneda-speedrun.pdf"
 	
 	cp yoneda-speedrun-pal.pdf "/Users/psu/Dropbox/GoodReader/Math and Physics/More Math/Cats/yoneda-speedrun-pal.pdf"
+	
+	cp yoneda-speedrun-pal-eu.pdf "/Users/psu/Dropbox/GoodReader/Math and Physics/More Math/Cats/yoneda-speedrun-pal-eu.pdf"
 	
 	cp yoneda-speedrun-lucida.pdf "/Users/psu/Dropbox/GoodReader/Math and Physics/More Math/Cats/yoneda-speedrun-lucida.pdf"
 	
