--- a/scott-1980/Makefile
+++ b/scott-1980/Makefile
@@ -14,10 +14,14 @@ all: scott-main.tex
 	pdflatex scott-1980-pal.tex
 	pdflatex scott-1980-ch.tex
 	pdflatex scott-1980-pal-eu.tex
-	cp scott-1980-pal.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ Lambda-Calculus\ \(1980\,psu\).pdf
-	cp scott-1980-cmr.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ Lambda-Calculus\ \(1980\,cmr\).pdf
-	cp scott-1980-ch.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ Lambda-Calculus\ \(1980\,ch\).pdf
-	cp scott-1980-pal-eu.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ Lambda-Calculus\ \(1980\,eu\).pdf
+	cp scott-1980-pal.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/More\ Math/Cons\ \&\ Logic/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ λ-Calculus\ \(1980\,psu\).pdf
+	cp scott-1980-cmr.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/More\ Math/Cons\ \&\ Logic/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ λ-Calculus\ \(1980\,cmr\).pdf
+	cp scott-1980-ch.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/More\ Math/Cons\ \&\ Logic/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ λ-Calculus\ \(1980\,ch\).pdf
+	cp scott-1980-pal-eu.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/More\ Math/Cons\ \&\ Logic/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ λ-Calculus\ \(1980\,eu\).pdf
+	cp scott-1980-pal.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ λ-Calculus\ \(1980\,psu\).pdf
+	cp scott-1980-cmr.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ λ-Calculus\ \(1980\,cmr\).pdf
+	cp scott-1980-ch.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ λ-Calculus\ \(1980\,ch\).pdf
+	cp scott-1980-pal-eu.pdf /Users/psu/Dropbox/GoodReader/Math\ and\ Physics/Types\,\ etc/Scott\,\ D\ -\ Relating\ Theories\ of\ the\ λ-Calculus\ \(1980\,eu\).pdf
 
 clean:
 	rm -rf *.out *.log *.aux *sync*
