--- a/yoneda-speedrun/Makefile
+++ b/yoneda-speedrun/Makefile
@@ -1,3 +1,5 @@
+DISK=/Users/psu/Library/Mobile Documents/3L68KQB4HG~com~readdle~CommonDocuments/Documents/Math and Physics/More Math/Cats
+
 all: 
 	pdflatex --synctex=1 yoneda-speedrun.tex
 	pdflatex --synctex=1 yoneda-speedrun.tex
@@ -16,13 +18,13 @@ all:
 	pdflatex --synctex=1 yoneda-speedrun-lucida.tex
 	pdflatex --synctex=1 yoneda-speedrun-lucida.tex
 
-	cp yoneda-speedrun.pdf "/Users/psu/Desktop/Google/Reader/Math and Physics/More Math/Cats/yoneda-speedrun.pdf"
+	cp yoneda-speedrun.pdf "$(DISK)/yoneda-speedrun.pdf"
 	
-	cp yoneda-speedrun-pal.pdf "/Users/psu/Desktop/Google/Reader/Math and Physics/More Math/Cats/yoneda-speedrun-pal.pdf"
+	cp yoneda-speedrun-pal.pdf "$(DISK)/yoneda-speedrun-pal.pdf"
 	
-	cp yoneda-speedrun-pal-eu.pdf "/Users/psu/Desktop/Google/Reader/Math and Physics/More Math/Cats/yoneda-speedrun-pal-eu.pdf"
+	cp yoneda-speedrun-pal-eu.pdf "$(DISK)/yoneda-speedrun-pal-eu.pdf"
 	
-	cp yoneda-speedrun-lucida.pdf "/Users/psu/Desktop/Google/Reader/Math and Physics/More Math/Cats/yoneda-speedrun-lucida.pdf"
+	cp yoneda-speedrun-lucida.pdf "$(DISK)/yoneda-speedrun-lucida.pdf"
 	
 clean:
 	rm -rf *.out *.log *.aux *sync*
