--- a/lambek-1980/Makefile
+++ b/lambek-1980/Makefile
@@ -1,3 +1,5 @@
+DEST="/Users/psu/Google/Reader/Math and Physics/More Math/Cons \& Logic"
+
 all:
 	pdflatex lambek-1980-pal.tex
 	pdflatex lambek-1980-pal.tex
@@ -11,10 +13,10 @@ all:
 	pdflatex lambek-1980-lucida.tex
 	pdflatex lambek-1980-lucida.tex
 	pdflatex lambek-1980-lucida.tex
-	cp lambek-1980-pal.pdf "/Users/psu/Library/CloudStorage/Dropbox/GoodReader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,pal).pdf"
-	cp lambek-1980-cmr.pdf "/Users/psu/Library/CloudStorage/Dropbox/GoodReader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,cmr).pdf"
-	cp lambek-1980-ch.pdf "/Users/psu/Library/CloudStorage/Dropbox/GoodReader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,ch).pdf"
-	cp lambek-1980-lucida.pdf "/Users/psu/Library/CloudStorage/Dropbox/GoodReader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,luc).pdf"
+	cp lambek-1980-pal.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,pal).pdf"
+	cp lambek-1980-cmr.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,cmr).pdf"
+	cp lambek-1980-ch.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,ch).pdf"
+	cp lambek-1980-lucida.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,luc).pdf"
 
 clean:
 	rm -rf *.out *.log *.aux *sync*
