--- a/lambek-1984/Makefile
+++ b/lambek-1984/Makefile
@@ -1,22 +1,15 @@
 DEST="/Users/psu/Google/Reader/Math and Physics/More Math/Cons \& Logic"
 
 all:
-	pdflatex lambek-1980-pal.tex
-	pdflatex lambek-1980-pal.tex
-	pdflatex lambek-1980-pal.tex
-	pdflatex lambek-1980-cmr.tex
-	pdflatex lambek-1980-cmr.tex
-	pdflatex lambek-1980-cmr.tex
-	lualatex lambek-1980-ch.tex
-	lualatex lambek-1980-ch.tex
-	lualatex lambek-1980-ch.tex
-	pdflatex lambek-1980-lucida.tex
-	pdflatex lambek-1980-lucida.tex
-	pdflatex lambek-1980-lucida.tex
-	cp lambek-1980-pal.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,pal).pdf"
-	cp lambek-1980-cmr.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,cmr).pdf"
-	cp lambek-1980-ch.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,ch).pdf"
-	cp lambek-1980-lucida.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek - From λ-Calculus to Cartesian Closed Categories (1980,luc).pdf"
+	pdflatex lambek-1984-pal.tex
+	pdflatex lambek-1984-pal.tex
+	pdflatex lambek-1984-pal.tex
+	pdflatex lambek-1984-cmr.tex
+	pdflatex lambek-1984-cmr.tex
+	pdflatex lambek-1984-cmr.tex
+	
+	cp lambek-1984-pal.pdf "/Users/psu/Google/Reader/Math and Physics/AAA Inbox/lambek-1984-pal.pdf"
+	cp lambek-1984-cmr.pdf "/Users/psu/Google/Reader/Math and Physics/AAA Inbox/lambek-1984-cmr.pdf"
 
 clean:
 	rm -rf *.out *.log *.aux *sync*
