--- a/lambek-1984/Makefile
+++ b/lambek-1984/Makefile
@@ -7,9 +7,10 @@ all:
 	pdflatex lambek-1984-cmr.tex
 	pdflatex lambek-1984-cmr.tex
 	pdflatex lambek-1984-cmr.tex
-	
-	cp lambek-1984-pal.pdf "/Users/psu/Google/Reader/Math and Physics/AAA Inbox/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, pal).pdf"
-	cp lambek-1984-cmr.pdf "/Users/psu/Google/Reader/Math and Physics/AAA Inbox/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, cmr).pdf"
+
+	cp lambek-1984-pal.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, pal).pdf"
+	cp lambek-1984-cmr.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, cmr).pdf"
+
 
 clean:
 	rm -rf *.out *.log *.aux *sync*
