--- a/lambek-1984/Makefile
+++ b/lambek-1984/Makefile
@@ -11,6 +11,10 @@ all:
 	cp lambek-1984-pal.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, pal).pdf"
 	cp lambek-1984-cmr.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, cmr).pdf"
 
+	cp lambek-1984-cmr.pdf /Users/psu/Google/Reader/Math\ and\ Physics/Howard-CCC/Lambek\,\ Scott\ -\ Aspects\ of\ Higher\ Order\ Categorical\ Logic\ \(1984\,\ cmr\).pdf
+
+	cp lambek-1984-pal.pdf /Users/psu/Google/Reader/Math\ and\ Physics/Howard-CCC/Lambek\,\ Scott\ -\ Aspects\ of\ Higher\ Order\ Categorical\ Logic\ \(1984\,\ pal\).pdf
+
 
 clean:
 	rm -rf *.out *.log *.aux *sync*
