--- a/lambek-1984/Makefile
+++ b/lambek-1984/Makefile
@@ -1,4 +1,3 @@
-DEST="/Users/psu/Google/Reader/Math and Physics/More Math/Cons \& Logic"
 
 all:
 	pdflatex lambek-1984-pal.tex
@@ -8,8 +7,8 @@ all:
 	pdflatex lambek-1984-cmr.tex
 	pdflatex lambek-1984-cmr.tex
 
-	cp lambek-1984-pal.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, pal).pdf"
-	cp lambek-1984-cmr.pdf "/Users/psu/Google/Reader/Math and Physics/More Math/Cons & Logic/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, cmr).pdf"
+	cp lambek-1984-pal.pdf "/Users/psu/Google/Reader/Math and Physics/Maths/Cons & Logic/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, pal).pdf"
+	cp lambek-1984-cmr.pdf "/Users/psu/Google/Reader/Math and Physics/Maths/Cons & Logic/Lambek, Scott - Aspects of Higher Order Categorical Logic (1984, cmr).pdf"
 
 	cp lambek-1984-cmr.pdf /Users/psu/Google/Reader/Math\ and\ Physics/Howard-CCC/Lambek\,\ Scott\ -\ Aspects\ of\ Higher\ Order\ Categorical\ Logic\ \(1984\,\ cmr\).pdf
 
